refactor. testCode 추가 작성